[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/CrateTreasure.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites and sheets/Health and PickUps/Pearl.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
resource_name = "bounce"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Display:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "shrink"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Display:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Diamond"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Display:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Gold"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Display:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="CrateTreasure" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Display" type="Sprite" parent="."]
position = Vector2( 0, 1.25 )
texture = ExtResource( 2 )

[node name="TreasurePU" type="Area2D" parent="."]
collision_layer = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreasurePU"]
shape = SubResource( 1 )

[node name="Bounce" type="AnimationPlayer" parent="."]
autoplay = "bounce"
playback_speed = 1.5
anims/bounce = SubResource( 2 )
anims/shrink = SubResource( 6 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Diamond = SubResource( 4 )
anims/Gold = SubResource( 5 )

[connection signal="tree_exited" from="." to="." method="_on_CrateTreasure_tree_exited"]
[connection signal="area_entered" from="TreasurePU" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="Bounce" to="." method="_on_Bounce_animation_finished"]
